// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TerminalStreamWritable writes a debug message 1`] = `
Object {
  "debug": "test message",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message",
  "verbose": "",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a verbose message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message",
  "warning": "",
}
`;

exports[`TerminalStreamWritable writes a warning message 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]test message[default]",
}
`;

exports[`TerminalStreamWritable writes an error message 1`] = `
Object {
  "debug": "",
  "error": "[red]test message[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;
